# rust-api-rpc

./: Cargo.toml
src/: client.rs  server.rs
