[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "router-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "router-client"
path = "src/client.rs"

[dependencies]
async-stream = "0.3.5"
build = "0.0.2"
prost = "0.11.9"
rand = "0.8.5"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
